# dito

./: .gitignore  LICENSE  README.md
anchor/: .gitignore  Anchor.toml  README.md
anchor/programs/dito-soul/: Cargo.toml
anchor/programs/dito-soul/src/: errors.rs  events.rs  lib.rs  state.rs
anchor/programs/dito-soul/src/instructions/: apply_decay.rs  apply_strike.rs  create_user.rs  initialize.rs  mint_soul.rs  mod.rs  pause.rs  record_activity.rs  update_stage.rs  verify_identity.rs  withdraw_treasury.rs
anchor/tests/: dito-soul.ts
app/: .env.example  .gitignore  MIGRATION_GUIDE.md  README.md  RESEND_SETUP.md  SYSTEM_MODE.md  check-tables.js  create-tables.js  create-user-test.js  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vercel.json
app/public/: manifest.json  robots.txt  sw.js
app/scripts/: generate-icons.mjs  generate-keypair.ts  run-migration.mjs
app/src/app/: error.tsx  (+8 more)
docs/: .gitignore  CNAME  README.md  index.html
gateway/: .env.example  Cargo.toml  Dockerfile
gateway/scripts/: dev-token.mjs
gateway/src/: main.rs
gateway/src/database/: mod.rs  supabase.rs
gateway/src/handler/: arena.rs  chat.rs  command.rs  diary.rs  ember.rs  memories.rs  mod.rs  portal.rs  soul.rs  souls.rs  talents.rs  timecapsule.rs  twofa.rs
gateway/src/llm/: prompt.rs  provider.rs
gateway/src/middleware/: mod.rs
gateway/src/model/: mod.rs
sdk/: .gitignore  README.md  README_KR.md  dito-sdk.ts  examples.ts  openclaw-function.json  package-lock.json  package.json  run-test.js  test.js
(+134 files in other folders)
